--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,65 @@ body {
   height: 50px;
   border-radius: 50%;
   border: 2px solid white;
+  transition: border-color 0.3s, transform 0.3s;
+}
+.logo img:hover {
+  border-color: rgb(41, 41, 155);
+  transform: scale(1.1);
+}
+
+/** ESTILO DE BOTONES **/
+.btn-success {
+  background-color: rgb(41, 41, 155);
+  border-color: rgb(169, 169, 169);
+  transition: border-color 0.3s, transform 0.3s;
+}
+.btn-success:hover {
+  border-color: rgb(169, 169, 169);
+  transform: scale(1.1);
+  background-color: rgb(41, 41, 155);
+}
+.btn-success:hover:active {
+  border-color: rgb(169, 169, 169);
+  background-color: rgb(41, 41, 155);
+}
+.btn-success:hover:focus {
+  border-color: rgb(169, 169, 169);
+  background-color: rgb(41, 41, 155);
+}
+
+.btn-secondary {
+  background-color: rgb(55, 55, 55);
+  border-color: rgb(169, 169, 169);
+  transition: border-color 0.3s, transform 0.3s;
+}
+.btn-secondary:hover {
+  border-color: rgb(55, 55, 55);
+  transform: scale(1.1);
+  background-color: rgb(169, 169, 169);
+}
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+  transition: color 0.3s, transform 0.3s;
+}
+.navbar-light .navbar-nav .nav-link:focus:hover,
+.navbar-light .navbar-nav .nav-link:hover:hover {
+  color: rgb(41, 41, 155);
+  transform: scale(1.2);
+}
+
+.fab {
+  transition: color 0.3s, transform 0.3s;
+}
+.fab:hover {
+  color: rgb(41, 41, 155);
+  transform: scale(1.2);
+}
+
+/** ESTILOS FORMULARIO **/
+.form-control:focus {
+  border: 3px solid rgb(41, 41, 155);
 }
 
 /** BANNER PARA INDEX **/
@@ -65,6 +124,7 @@ body {
   font-size: 80px;
   font-weight: bold;
   text-shadow: 5px 2px 0 rgb(0, 0, 0);
+  word-wrap: break-word;
 }
 
 /** CORRECCION PARA IFRAME CON YOUTUBE **/
