--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,25 +1,29 @@
 /** RESET GENERAL **/
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 /** HERENCIA **/
-%efecto_fondo{
+%efecto_fondo {
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 /**VARIABLES**/
 $color_primario: rgb(169, 169, 169);
 $color_secundario: rgb(55, 55, 55);
 $color_texto: white;
+$color_tematico: rgb(41, 41, 155);
 
 /** APLICACION DE TIPO DE FUENTE **/
-@font-face{
+@font-face {
     font-family: roboto_regular;
-    src: url(../src/fonts/roboto-regular.ttf) format(truetype); 
+    src: url(../src/fonts/roboto-regular.ttf) format(truetype);
 }
-body{
+
+body {
     font-family: roboto_regular;
 }
 
@@ -27,50 +31,125 @@ body{
 #body_index {
     background-image: url('../src/images/index_fondo.jpg');
 }
+
 #body_blog {
     background-image: url('../src/images/blog_fondo.jpg');
 }
+
 #body_videos {
     background-image: url('../src/images/videos_fondo.jpg');
 }
+
 #body_mapa {
     background-image: url('../src/images/mapa_fondo.jpg');
 }
+
 #body_contacto {
     background-image: url('../src/images/contacto_fondo.jpg');
 }
+
 .background {
     background-attachment: fixed;
     @extend %efecto_fondo;
 }
 
-/** ESTILO DE LOGO **/ 
-.logo img{
+/** ESTILO DE LOGO **/
+.logo img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
     border: 2px solid white;
+    transition: border-color 0.3s, transform 0.3s;
+
+    &:hover {
+        border-color: $color_tematico;
+        transform: scale(1.1);
+    }
+}
+
+/** ESTILO DE BOTONES **/
+.btn-success {
+    background-color: $color_tematico;
+    border-color: $color_primario;
+    transition: border-color 0.3s, transform 0.3s;
+
+    &:hover {
+        border-color: $color_primario;
+        transform: scale(1.1);
+        background-color: $color_tematico;
+
+        &:active {
+            border-color: $color_primario;
+            background-color: $color_tematico;
+        }
+
+        &:focus {
+            border-color: $color_primario;
+            background-color: $color_tematico;
+        }
+    }
+
+}
+
+.btn-secondary {
+    background-color: $color_secundario;
+    border-color: $color_primario;
+    transition: border-color 0.3s, transform 0.3s;
+
+    &:hover {
+        border-color: $color_secundario;
+        transform: scale(1.1);
+        background-color: $color_primario;
+    }
+}
+
+.navbar-light .navbar-nav .nav-link:focus,
+.navbar-light .navbar-nav .nav-link:hover {
+    transition: color 0.3s, transform 0.3s;
+
+    &:hover {
+        color: $color_tematico;
+        transform: scale(1.2);
+    }
+}
+
+.fab {
+    transition: color 0.3s, transform 0.3s;
+
+    &:hover {
+        color: $color_tematico;
+        transform: scale(1.2);
+    }
+}
+
+/** ESTILOS FORMULARIO **/
+
+.form-control:focus {
+    border: 3px solid $color_tematico;
 }
 
 /** BANNER PARA INDEX **/
-#banner{
+#banner {
     background-image: url("../src/images/hombre_peso_muerto.jpg");
     z-index: 2;
     height: 400px;
     @extend %efecto_fondo;
 }
-#titulo_principal{
+
+#titulo_principal {
     font-size: 80px;
     font-weight: bold;
     text-shadow: 5px 2px 0 rgb(0, 0, 0);
+    word-wrap: break-word;
 }
 
 /** CORRECCION PARA IFRAME CON YOUTUBE **/
-.iframeyoutube{
+.iframeyoutube {
     position: relative;
     padding-bottom: 56.25%;
     height: 0;
-    iframe{
+
+    iframe {
         position: absolute;
         top: 0;
         left: 0;
