--- a/css/style.css
+++ b/css/style.css
@@ -55,39 +55,39 @@ body {
   transition: border-color 0.3s, transform 0.3s;
 }
 .logo img:hover {
-  border-color: rgb(41, 41, 155);
+  border-color: rgb(57, 91, 100);
   transform: scale(1.1);
 }
 
 /** ESTILO DE BOTONES **/
 .btn-success {
-  background-color: rgb(41, 41, 155);
-  border-color: rgb(169, 169, 169);
+  background-color: rgb(57, 91, 100);
+  border-color: rgb(165, 201, 202);
   transition: border-color 0.3s, transform 0.3s;
 }
 .btn-success:hover {
-  border-color: rgb(169, 169, 169);
+  border-color: rgb(165, 201, 202);
   transform: scale(1.1);
-  background-color: rgb(41, 41, 155);
+  background-color: rgb(57, 91, 100);
 }
 .btn-success:hover:active {
-  border-color: rgb(169, 169, 169);
-  background-color: rgb(41, 41, 155);
+  border-color: rgb(165, 201, 202);
+  background-color: rgb(57, 91, 100);
 }
 .btn-success:hover:focus {
-  border-color: rgb(169, 169, 169);
-  background-color: rgb(41, 41, 155);
+  border-color: rgb(165, 201, 202);
+  background-color: rgb(57, 91, 100);
 }
 
 .btn-secondary {
-  background-color: rgb(55, 55, 55);
-  border-color: rgb(169, 169, 169);
+  background-color: rgb(44, 51, 51);
+  border-color: rgb(165, 201, 202);
   transition: border-color 0.3s, transform 0.3s;
 }
 .btn-secondary:hover {
-  border-color: rgb(55, 55, 55);
+  border-color: rgb(44, 51, 51);
   transform: scale(1.1);
-  background-color: rgb(169, 169, 169);
+  background-color: rgb(165, 201, 202);
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
@@ -96,7 +96,7 @@ body {
 }
 .navbar-light .navbar-nav .nav-link:focus:hover,
 .navbar-light .navbar-nav .nav-link:hover:hover {
-  color: rgb(41, 41, 155);
+  color: rgb(57, 91, 100);
   transform: scale(1.2);
 }
 
@@ -104,7 +104,7 @@ body {
   transition: color 0.3s, transform 0.3s;
 }
 .fab:hover {
-  color: rgb(41, 41, 155);
+  color: rgb(57, 91, 100);
   transform: scale(1.2);
 }
 
@@ -112,12 +112,12 @@ body {
   text-decoration: none;
 }
 .efecto_subrayado:hover {
-  text-decoration: underline rgb(41, 41, 155);
+  text-decoration: underline rgb(57, 91, 100);
 }
 
 /** ESTILOS FORMULARIO **/
 .form-control:focus {
-  border: 3px solid rgb(41, 41, 155);
+  border: 3px solid rgb(57, 91, 100);
 }
 
 /** BANNER PARA INDEX **/
@@ -198,6 +198,15 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
+}
+
+.navbar,
+footer {
+  background-color: rgb(165, 201, 202) !important;
+}
+
+.bg-dark {
+  background-color: rgb(44, 51, 51) !important;
 }
 
 /*# sourceMappingURL=style.css.map */
