--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,15 @@ body {
   background-attachment: fixed;
 }
 
+.navbar,
+footer {
+  background-color: rgb(165, 201, 202) !important;
+}
+
+.bg-dark {
+  background-color: rgb(44, 51, 51) !important;
+}
+
 /** ESTILO DE LOGO **/
 .logo img {
   width: 50px;
@@ -172,6 +181,35 @@ body {
   }
 }
 
+.flip-in-hor-bottom {
+  -webkit-animation: flip-in-hor-bottom 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
+  animation: flip-in-hor-bottom 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
+}
+@-webkit-keyframes flip-in-hor-bottom {
+  0% {
+    -webkit-transform: rotateX(80deg);
+    transform: rotateX(80deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+    opacity: 1;
+  }
+}
+@keyframes flip-in-hor-bottom {
+  0% {
+    -webkit-transform: rotateX(80deg);
+    transform: rotateX(80deg);
+    opacity: 0;
+  }
+  100% {
+    -webkit-transform: rotateX(0);
+    transform: rotateX(0);
+    opacity: 1;
+  }
+}
+
 .parrafo_contacto {
   animation: text-focus-in 1s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
 }
@@ -198,15 +236,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-}
-
-.navbar,
-footer {
-  background-color: rgb(165, 201, 202) !important;
-}
-
-.bg-dark {
-  background-color: rgb(44, 51, 51) !important;
 }
 
 /*# sourceMappingURL=style.css.map */
