--- a/scss/style.scss
+++ b/scss/style.scss
@@ -53,6 +53,15 @@ body {
     @extend %efecto_fondo;
 }
 
+.navbar,
+footer {
+    background-color: $color_primario !important;
+}
+
+.bg-dark {
+    background-color: $color_secundario !important;
+}
+
 /** ESTILO DE LOGO **/
 .logo img {
     width: 50px;
@@ -194,6 +203,39 @@ body {
 
 }
 
+.flip-in-hor-bottom {
+    -webkit-animation: flip-in-hor-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s both;
+    animation: flip-in-hor-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s both;
+
+    @-webkit-keyframes flip-in-hor-bottom {
+        0% {
+            -webkit-transform: rotateX(80deg);
+            transform: rotateX(80deg);
+            opacity: 0;
+        }
+
+        100% {
+            -webkit-transform: rotateX(0);
+            transform: rotateX(0);
+            opacity: 1;
+        }
+    }
+
+    @keyframes flip-in-hor-bottom {
+        0% {
+            -webkit-transform: rotateX(80deg);
+            transform: rotateX(80deg);
+            opacity: 0;
+        }
+
+        100% {
+            -webkit-transform: rotateX(0);
+            transform: rotateX(0);
+            opacity: 1;
+        }
+    }
+}
+
 .parrafo_contacto {
     animation: text-focus-in 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
 
@@ -225,13 +267,4 @@ body {
         width: 100%;
         height: 100%;
     }
-}
-
-.navbar,
-footer {
-    background-color: $color_primario !important;
-}
-
-.bg-dark {
-    background-color: $color_secundario !important;
 }
