--- a/scss/style.scss
+++ b/scss/style.scss
@@ -186,7 +186,7 @@ footer {
 }
 
 /** ANIMACIONES **/
-.flip-in-hor-bottom {
+.blog__img--animacion {
     animation: flip-in-hor-bottom 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.3s both;
 
     @keyframes flip-in-hor-bottom {
