--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,7 @@ footer {
 }
 
 /** ANIMACIONES **/
-.flip-in-hor-bottom {
+.blog__img--animacion {
   animation: flip-in-hor-bottom 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.3s both;
 }
 @keyframes flip-in-hor-bottom {
